# Music

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gulpfile.js  index.html  main.js  package-lock.json  package.json
lib/bulma/: package.json
lib/bulma/sass/base/: generic.sass
lib/bulma/sass/components/: card.sass  media.sass  message.sass  navbar.sass  tabs.sass
lib/bulma/sass/elements/: box.sass  button.sass  image.sass  table.sass
lib/palette/: binding.gyp  bindings.gyp  bindings.js  package-lock.json  package.json  test-data.js  test.js
lib/palette/src/: Color.h  ColorCutQuantizer.cpp  ColorCutQuantizer.h  Generate.cc  Generate.h  Palette.cpp  Palette.h  Swatch.cpp  Swatch.h  Target.cpp  Target.h  async.cpp  async.h  index.cc  sync.cpp  sync.h
res/: resources.qrc
src/: MainWindow.cpp  MainWindow.h  Player.cpp  Player.h  Player.js  Storage.js  TrackItem.cpp  TrackItem.h  actions.js  index.js  main.cpp  reducers.js
src/components/: albums.js  app.js  artists.js  content.js  detailView.js  navbar.js  playbar.js  playlists.js  songs.js
src/containers/: AppContainer.js  SingleView.js  footer.js  header.js  page.js
src/css/: test-mods.css
src/data/: ActionTypes.js  Album.js  AlbumStore.js  Artist.js  MusicActions.js  Playlist.js  Song.js  SongStore.js
src/raw/: assets.js
src/sass/: root.scss
src/ui/: MainWindow.ui
src/util/: Functions.js  Notification.js
src/views/: BottomNav.js  Content.js  Navbar.js  root.js
